# django-modelnotes

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
_notes/migrations/: 0001_initial.py
_test_project/test_app/: models.py
_test_project/test_project/: settings.py
_tmp/: .gitignore  setup.cfg
_tmp/src/modelnotes/: models.py
_tmp/src/modelnotes/migrations/: 0001_initial.py
_tmp/src/modelnotes/templates/modelnotes/form/: edit_note.htm
_tmp/src/modelnotes/views/: action.py  gui.py
_tmp/src/testproject/testapp/templates/testapp/: home.html
_tmp/src/testproject/testproject/: settings.py
_tmp/src/testproject/testproject/templates/: base.htm
_tmp/src/testproject/testproject/templates/registration/: login.html
modelnotes/: __init__.py  __package__.py  admin.py  urls.py
modelnotes/views/: gui.py
notes/: __init__.py  admin.py  models.py
notes/views/: action.py
requirements/: base.txt
src/: manage.py
src/djangoaddicts/: manage.py
src/djangoaddicts/local_project/: settings.py
src/djangoaddicts/modelnotes/: admin.py  apps.py  fields.py  forms.py  helpers.py  managers.py  models.py  urls.py
src/modelnotes/: forms.py  helpers.py  models.py  urls.py
src/modelnotes/migrations/: 0002_auto_20221225_2135.py  0003_alter_note_content_type.py  (+2 more)
test_project/test_app/: models.py  urls.py  views.py
test_project/test_project/: settings.py  urls.py
testproject/notes/: admin.py  models.py  urls.py
testproject/testapp/: admin.py  models.py
testproject/testproject/: settings.py  urls.py
to_delete/requirements/: test.txt
(+46 files in other folders)
