[metadata]
# version is extracted from SCM tag by setuptools_scm
author = David Slusser
author_email = dbslusser@gmail.com
description =
home_page =
name = django-modelnotes

description_content_type = text/x-rst; charset=UTF-8
description_file = README.md
license = Proprietary
platform = any

[options]
python_requires = >= 3.8
zip_safe = false
packages = modelnotes

include_package_data=True
package_dir =
    = src

install_requires =
    django-auditlog
    django-braces
    django-handyhelpers==0.1.*
setup_requires =
    pytest-runner
    setuptools_scm
    wheel
tests_require =
    django
    django-debug-toolbar
    django-extensions
    django-environ
    pytest-env
    pytest-django
    pytest-factoryboy
    model-bakery
    mock
    pytest

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc
    test

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[pytest]
addopts =
    -rsvx --strict-markers -m 'not extra'
    --doctest-modules

[tool:pytest]
doctest_optionflags =
    ALLOW_BYTES
    ALLOW_UNICODE
    ELLIPSIS
    IGNORE_EXCEPTION_DETAIL
    NORMALIZE_WHITESPACE
testpaths = tests
markers =
  network
